# ParallelKnapsack

./: CMakeLists.txt  README.md  main.cpp
algorithm/: algorithm.h  algorithm_impl.h  algorithm_tbb.h
scripts/: FindTBB.cmake  test.sh
